RESOLVED FIXED69533
[EFL] Do not create cairo surfaces with the wrong size for form elements
https://bugs.webkit.org/show_bug.cgi?id=69533
Summary [EFL] Do not create cairo surfaces with the wrong size for form elements
Raphael Kubo da Costa (:rakuco)
Reported 2011-10-06 09:41:18 PDT
[EFL] Do not create cairo surfaces with the wrong size for form elements
Attachments
Patch (2.39 KB, patch)
2011-10-06 09:43 PDT, Raphael Kubo da Costa (:rakuco)
no flags
Raphael Kubo da Costa (:rakuco)
Comment 1 2011-10-06 09:43:54 PDT
Ryosuke Niwa
Comment 2 2011-10-06 10:26:27 PDT
Any informal reviews from EFL contributors?
Leandro Pereira
Comment 3 2011-10-06 10:47:25 PDT
Comment on attachment 109969 [details] Patch Informal r+.
Ryosuke Niwa
Comment 4 2011-10-06 10:50:39 PDT
Comment on attachment 109969 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=109969&action=review > Source/WebCore/ChangeLog:21 > + No new tests, this is triggered by running running pixel tests for > + running, in this order, fast/forms/button-sizes.html, > + fast/forms/input-appearance-preventDefault.html, > + fast/forms/input-appearance-spinbutton-disabled-readonly.html, > + fast/forms/input-appearance-width.html, > + fast/forms/input-button-sizes.html, > + fast/forms/input-placeholder-text-indent.html and > + fast/forms/input-text-click-inside.html (!). Should this patch cause a rebaseline? Don't we need to rebaseline these tests for EFL?
Raphael Kubo da Costa (:rakuco)
Comment 5 2011-10-06 10:59:33 PDT
(In reply to comment #4) > (From update of attachment 109969 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=109969&action=review > > > Source/WebCore/ChangeLog:21 > > + No new tests, this is triggered by running running pixel tests for > > + running, in this order, fast/forms/button-sizes.html, > > + fast/forms/input-appearance-preventDefault.html, > > + fast/forms/input-appearance-spinbutton-disabled-readonly.html, > > + fast/forms/input-appearance-width.html, > > + fast/forms/input-button-sizes.html, > > + fast/forms/input-placeholder-text-indent.html and > > + fast/forms/input-text-click-inside.html (!). > > Should this patch cause a rebaseline? Don't we need to rebaseline these tests for EFL? We haven't finished upstreaming our DRT code yet, so we still don't have any baselines upstream.
Ryosuke Niwa
Comment 6 2011-10-06 11:01:06 PDT
Comment on attachment 109969 [details] Patch Okay. Sane enough to me.
WebKit Review Bot
Comment 7 2011-10-06 12:15:03 PDT
Comment on attachment 109969 [details] Patch Clearing flags on attachment: 109969 Committed r96844: <http://trac.webkit.org/changeset/96844>
WebKit Review Bot
Comment 8 2011-10-06 12:15:07 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.