[EFL] Do not create cairo surfaces with the wrong size for form elements https://bugs.webkit.org/show_bug.cgi?id=69533

Patch by Raphael Kubo da Costa <kubo@profusion.mobi> on 2011-10-06
Reviewed by Ryosuke Niwa.

RenderThemeEfl::cacheThemePartResizeAndReset resizes the Ecore_Evas
associated with an entry, but did not reset the `size` attribute of the
struct -- in practice, this meant the subsequent call to
themePartCacheEntrySurfaceCreate would create a cairo surface with the
previous size, thus rendering an element with the wrong size.

No new tests, this is triggered by running running pixel tests for
running, in this order, fast/forms/button-sizes.html,
fast/forms/input-appearance-preventDefault.html,
fast/forms/input-appearance-spinbutton-disabled-readonly.html,
fast/forms/input-appearance-width.html,
fast/forms/input-button-sizes.html,
fast/forms/input-placeholder-text-indent.html and
fast/forms/input-text-click-inside.html (!).

* platform/efl/RenderThemeEfl.cpp:
(WebCore::RenderThemeEfl::cacheThemePartResizeAndReset): Reset the
size attribute when resizing the canvas.

Canonical link: https://commits.webkit.org/85602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96844 268f45cc-cd09-0410-ab3c-d52691b4dbfc